--- a/public/Login/login.html
+++ b/public/Login/login.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <nav>
-        <a href="../Login/login.html">Login</a>
-        <a href="../Register/register.html">Register</a>
-        <a href="../Expense/expense.html">Expense</a>
-    </nav>
-    <p style="color: red;" id="message"></p>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="login-section">
+        <h1>Login Here!</h1>
+        <!--  message -->
+      <p style="color: red" id="message"></p>
 
-    <form id="login-form">
+      <form id="login-form">
         <label for="email">Email</label>
-        <input type="email" name="email" id="email" required><br/><br/>
+        <input type="email" name="email" id="email" required /><br /><br />
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" required><br/><br/>
+        <input
+          type="password"
+          name="password"
+          id="password"
+          required
+        /><br /><br />
         <button type="submit">Login</button>
-    </form>
-    <br/>
-    <button id="forget-btn">Forget Password</button>
+      </form>
+      <br />
+      <div class="forget-password">   
+        <button id="forget-btn">Forget Password</button>
+      </div>
+      <div class="register-link">   
+        <span>Not a member?</span>
+        <span><a href="../Register/register.html">Register</a></span>
+      </div>
+    </div>
     <script src="./login.js"></script>
-</body>
+  </body>
 </html>
