--- a/public/Expense/expense.html
+++ b/public/Expense/expense.html
@@ -3,25 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>expense</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
-      <a href="../Login/login.html">Login</a>
-      <a href="../Register/register.html">Register</a>
-      <a href="../Expense/expense.html">Expense</a>
-    </nav>
+    <header>
+      <div>MyExpenseTackerApp</div>
+      <div id="logout">Logout</div>
+    </header>
 
     <p id="premium-p"></p>
     <form id="expense-form">
       <label for="expendicture">Expendicture</label>
-      <input
-        type="number"
-        name="expendicture"
-        id="expendicture"
-        required
-      />  <br /><br />
+      <input type="number" name="expendicture" id="expendicture" required />
+      <br /><br />
       <label for="description">Description</label>
       <input
         type="text"
@@ -38,10 +33,11 @@
       ><br /><br />
       <button type="submit">Add Expense</button>
     </form>
+
     <hr />
-    <div style="display: flex; justify-content: center; align-items: center">
+    <div id="row-per-page-section">
       <label for="perpage">Number of rows per page</label>
-      <select name="perpage" id="perpage" >
+      <select name="perpage" id="perpage">
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
@@ -50,20 +46,21 @@
       <div id="pagination"></div>
     </div>
 
+    <hr />
+
     <div>
       <h1>Expenses</h1>
       <ul id="expense-list"></ul>
     </div>
     <div id="leader-board" style="display: none"></div>
 
-    <button id="downloadexpense" style="display: none">
-      Download File
-    </button>
+    <button id="downloadexpense" style="display: none">Download File</button>
 
     <!-- downloaded files -->
     <div id="downloaded-files"></div>
     <!-- script -->
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="./expense.js"></script>
+    <script src="./logout.js"></script>
   </body>
 </html>
