--- a/public/Register/register.html
+++ b/public/Register/register.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <nav>
-        <a href="../Login/login.html">Login</a>
-        <a href="../Register/register.html">Register</a>
-        <a href="../Expense/expense.html">Expense</a>
-    </nav>
-    <p style="color: red;" id="message"></p>
-    <form id="register-form">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="register-section">
+        <h1>Register Here!</h1>
+      <p style="color: red" id="message"></p>
+      <form id="register-form">
         <label for="name">Name</label>
-        <input type="text" name="name" id="name" required/><br><br>
+        <input type="text" name="name" id="name" required /><br /><br />
         <label for="email">Email</label>
-        <input type="email" name="email" id="email" required /><br><br>
+        <input type="email" name="email" id="email" required /><br /><br />
         <label for="password">password</label>
-        <input type="password" name="password" id="password" required/><br/><br>
+        <input
+          type="password"
+          name="password"
+          id="password"
+          required
+        /><br /><br />
         <button type="submit">SinUp</button>
-    </form>
+        <div class="Login-link">   
+            <span>Already member ?</span>
+            <span><a href="../Login/Login.html">Login</a></span>
+          </div>
+      </form>
+    </div>
     <script src="./register.js"></script>
-</body>
+  </body>
 </html>
