--- a/public/Register/register.html
+++ b/public/Register/register.html
@@ -25,7 +25,7 @@
         <button type="submit">SinUp</button>
         <div class="Login-link">   
             <span>Already member ?</span>
-            <span><a href="../Login/Login.html">Login</a></span>
+            <span><a href="../Login/login.html">Login</a></span>
           </div>
       </form>
     </div>
